[Fix] Added missing position relative and overflow auto

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -25,7 +25,8 @@ section {
   background-color: #777777;
   width: 100%;
   height: 170px;
-  position
+  overflow: auto;
+  position: relative;
 
 }
 
